2025-02-13  Oliver Kiddle  <opk@zsh.org>

	* 53358: Completion/Zsh/Command/_typeset: adapt completion to
	reflect 53348 and extend exclusion lists to cover more + options

2025-02-12  Bart Schaefer  <schaefer@zsh.org>

	* 53360: Src/Zle/complist.c: domenuselect() fails if the previous
	completion did not generate a list (fix for segfault)

	* 53346 (cf. 53350): Util/helpfiles: fix use of "man" on file paths

	* 53348: Doc/Zsh/builtins.yo, Src/builtin.c, Test/K01nameref.ztst:
	Revise handling of incompatible typeset options when used with -n

2025-02-04  Jun-ichi Takimoto  <takimoto-j@kba.biglobe.ne.jp>

	* unposted: Doc/Makefile.in, Etc/Makefile.in: remove a few more
	files by 'make clean'

2025-01-30  Oliver Kiddle  <opk@zsh.org>

	* github #118: Eisuke Kawashima: Completion/Unix/Command/_git:
	git rebase non-interactive mode also supports --autosquash

	* 53338: Completion/Zsh/Command/_typeset: complete typeset -n option

	* 53337: Doc/Zsh/mod_ksh93.yo, Src/Modules/ksh93.c: allow nameref -p

	* 53336: Doc/Makefile.in, Etc/Makefile.in:
	avoid GNU make specific use of $< in a non-inference rule

	* 53335: Src/hist.c, Src/string.c, Src/Zle/compcore.c,
	Src/Zle/compctl.c, Src/Zle/compmatch.c, Src/Zle/computil.c:
	Remove unused dupstring_glen() function and make use of the
	dupstring_wlen() variant in more places to avoid a strlen()

	* 53332, 53334: Src/builtin.c, Src/prompt.c, Src/Modules/stat.c,
	Src/Zle/compresult.c, Src/Zle/zle_misc.c:
	Avoid strlen calls after sprintf

2025-01-27  Oliver Kiddle  <opk@zsh.org>

	* 53329: Src/Modules/hlgroup.c: adapt .zle.sgr for CSI sequences
	that use : instead of ;

	* github #128: GI <gi1242+zsh@gmail.com>:
	Completion/Unix/Command/_vim: Updated completion for neovim

	* github #126: Wu, Zhenyu: Completion/Base/Completer/_expand_alias,
	Src/exec.c, Src/init.c, Src/parse.c, Src/utils.c, Src/zsh.h,
	configure.ac: Fix some typos

	* github #125: Kouhei Yanagita: Completion/Unix/Command/_ruby:
	Add completion for irb --no-pager
